Update README with badge and fix CLI entry point in package.json

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "README.md"
   ],
   "bin": {
-    "heroicons-mcp": "build/cli.js"
+    "heroicons-mcp": "build/entry.js"
   },
   "engines": {
     "node": ">=22.16.0"
